# put-it-out-there

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  MIGRATIONS.md  README.md  action.yml  eslint.config.js  package.json  pnpm-lock.yaml  putitoutthere.toml  vitest.config.ts
.github/: BRANCH_PROTECTION.md
.github/codeql/: codeql-config.yml
.github/workflows/: _matrix.yml  actionlint.yml  build.yml  bundle.yml  changelog-check.yml  codeql.yml  coverage.yml  docs-test.yml  docs.yml  e2e-fixture-job.yml  e2e-fixture.yml  e2e.yml  link-check.yml  lint.yml  release-npm.yml  release.yml  secret-scan.yml  tdd-lint.yml  test.yml
dist-action/: index.js
docs/: AGENTS.md  getting-started.md  index.md  package.json  playwright.config.ts  pnpm-lock.yaml
docs/.vitepress/: config.ts
docs/api/: action.md  cli.md  sdk.md
docs/audits/: 2026-04-20-canary-e2e-audit.md
docs/guide/: auth.md  (+11 more)
evals/: README.md  run-matrix.sh  run-n.sh  spike.sh
notes/: design-commitments.md  docs-eval-methodology.md  gates.md
src/: action.test.ts  action.ts  cli.test.ts  cli.ts  config.test.ts  config.ts  doctor.test.ts  doctor.ts  env.test.ts  env.ts  git.test.ts  git.ts  glob.test.ts  glob.ts  index.ts  init.test.ts  init.ts  log.test.ts  log.ts  oidc-policy.test.ts  oidc-policy.ts  plan.test.ts  plan.ts  preflight.test.ts  preflight.ts  publish.test.ts  publish.ts  release.ts  retry.ts  tag-template.ts  templates.test.ts  templates.ts  token.test.ts  token.ts  types.test.ts  types.ts  verbose.test.ts  verbose.ts  write-version.ts
test/fixtures/e2e-canary/python/: pyproject.toml
(+62 files in other folders)
