[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piot-fixture-zzz-python"
version = "__VERSION__"
description = "Put It Out There E2E canary fixture. Safe to ignore."
license = { text = "MIT" }

[tool.hatch.build.targets.wheel]
packages = ["src/piot_fixture_zzz_python"]
